--- a/manifest.json
+++ b/manifest.json
@@ -3,13 +3,14 @@
   "Organisation": "MarvalSoftware",
   "DisplayName": "@@PluginDisplayname",
   "Icon": "img/statuspage_16.png",
-  "Version": "1.0.8",
+  "Version": "1.0.9",
   "SupportedVersions": [
     "14.15.0",
     "0.0.0"
   ],
   "Pages": [
-    "request.aspx"
+    "request.aspx",
+    "plugin.aspx"
   ],
   "GlobalSettings": [
     "@@UserAPIKey"
